# P5

./: 2output.csv  Astar.py  AstarTemplate  HenrikMatk.m  Simple_test_dictionary  Untitled Diagram.xml  Yaaay  Yaaay.py  closeport.py  copyofclass.py  gggg.txt  initial  magcal.py  mai.csv  mwc.csv  mwo.csv  new  new.py  newOutput.csv  nonmanidata.py  offoutput.csv  output.csv  teseedfgpm
Final solution/: angle.py  positionsClass.py  positionsMain.py  robotClass.py  robotMain.py
Miniproject/: Miniproject-eloni-LAPTOP-AT1BTH61.opt  Miniproject.Device.Application.8665e301-b914-4f7b-8c4c-1738004c9f87.compileinfo  Miniproject.project  Miniproject.project.~u  MiniprojectV2-eloni-LAPTOP-AT1BTH61.opt  MiniprojectV2.Device.Application.8665e301-b914-4f7b-8c4c-1738004c9f87.compileinfo  MiniprojectV2.project  Untitled1-eloni-LAPTOP-AT1BTH61.opt  Untitled1.Device.Application.8665e301-b914-4f7b-8c4c-1738004c9f87.compileinfo  Untitled1.project  Untitled1.project.~u
P5/: CMakeLists.txt  package.xml  setup.py
P5/src/scripts/: positionListener.py  positionsClass.py  positionsMain.py  robotClass.py  robotMain.py
P5/src/scripts/test/: convert.py  listener.py  main.py  notmain.py  serialtest.py
Sandbox/: Temporary_upload_class  aStart old python.py  imu.py  main.py  notmain.py  teseedfgpm
Testing/: complex.py  orbit.py  rotate.py  straight.py
Towards final solution/: HenrikMatk.asv  HenrikMatk.m  Henrik_new_math.m  Temporary_Upload_main  Temporary_upload_class  Yaaay.py  aStart old python.py  classModule  classModule.py  copyofclass.py  copyofmain  headache  positionsClass.py  (+3 more)
(+51 files in other folders)
